name: llvm-general-pure-test
version: 3.4.0.0
license: BSD3
license-file: LICENSE
author: Benjamin S.Scarlet <fgthb0@greynode.net>
maintainer: Benjamin S. Scarlet <fgthb0@greynode.net>
copyright: Benjamin S. Scarlet 2013
build-type: Simple
stability: experimental
cabal-version: >= 1.8
category: Compilers/Interpreters, Code Generation
synopsis: Pure Haskell LLVM functionality (no FFI).
description:
  llvm-general-pure-test is a set of testing tools for working with the LLVM AST defined in llvm-general-pure.
  .
  For haddock, see <http://bscarlet.github.io/llvm-general/3.4.0.0/doc/html/llvm-general-pure-test/index.html>.
   
source-repository head
  type: git
  location: git://github.com/bscarlet/llvm-general.git

library
  ghc-options: -fwarn-unused-imports
  build-depends: 
    base >= 4.5.0.0 && < 5,
    transformers >= 0.3.0.0,
    mtl >= 2.0.1.0,
    template-haskell >= 2.5.0.0,
    containers >= 0.4.2.1,
    QuickCheck >= 2.5.1.1,
    llvm-general-pure == 3.4.0.0
  hs-source-dirs: src
  extensions:
    TupleSections
    DeriveDataTypeable
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    StandaloneDeriving
    ConstraintKinds
  exposed-modules:
    LLVM.General.Arbitrary

executable sample
  build-depends:  
    base >= 3 && < 5,
    QuickCheck >= 2.5.1.1,
    llvm-general-pure == 3.4.0.0,
    llvm-general-pure-test == 3.4.0.0,
    containers >= 0.4.2.1,
    mtl >= 2.0.1.0
  hs-source-dirs: sample
  main-is: Sample.hs

test-suite test
  type: exitcode-stdio-1.0
  build-depends:  
    base >= 3 && < 5,
    test-framework >= 0.5,
    test-framework-hunit >= 0.2.7,
    HUnit >= 1.2.4.2,
    test-framework-quickcheck2 >= 0.3.0.1,
    QuickCheck >= 2.5.1.1,
    llvm-general-pure == 3.4.0.0,
    llvm-general-pure-test == 3.4.0.0,
    containers >= 0.4.2.1,
    parsec >= 3.1.3,
    mtl >= 2.0.1.0
  hs-source-dirs: test
  extensions:
    TupleSections
    FlexibleInstances
    FlexibleContexts
  main-is: Test.hs
  other-modules:
    LLVM.General.Test.IR
